--- a/game.css
+++ b/game.css
@@ -8,5 +8,17 @@ canvas {
     box-shadow: black 20px 40px 50px;
 }
 
+.restartButton{
+    display: flex;
+    justify-content: center;
+}
 
+button {
+    display: inline;
+    background-color: transparent;
+    font-size: 2rem;
+    padding: 3px;
+    margin: 50px;
+    border: 0;
+}
 
